# simple-DIP-pipeline

./: .gitattributes  .gitignore  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dump_blue_color_10_frames.raw  dump_green_color_10_frames.raw  dump_magenta_color_10_frames.raw  dump_orange_color_10_frames.raw  dump_pink_color_10_frames.raw  dump_red_color_10_frames.raw  dump_white_color_10_frames.raw  dump_white_low_color_10_frames.raw  dump_yellow_color_10_frames.raw
lab2/: funcs.py  main.py
lab2/report/: rep.tex
src/dippipe/: __init__.py  cli.py  color.py  config.py  pipeline.py
src/dippipe/io/: __init__.py  artifacts.py  raw.py
src/dippipe/stages/: __init__.py  awb.py  base.py  demosaic.py  filtering.py  steps.py  tone.py
src/usage/: 01_full_pipeline.py  02_individual_stages.py  03_universal_raw.py  04_filters_comparison.py  README.md  _common.py
tests/: conftest.py  test_cli.py  test_demosaic.py  test_filtering.py  test_io.py  test_pipeline.py  test_smoke.py  test_tone.py
